--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -6,7 +6,7 @@
       rgba(18, 18, 17, 0.6) 58.46%,
       rgba(18, 18, 17, 0) 90.36%
     ),
-    url('../images/hero-section-bg.jpg');
+    url('./images/hero-section-bg.jpg');
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -24,7 +24,7 @@
         rgba(18, 18, 17, 0.6) 58.46%,
         rgba(18, 18, 17, 0) 90.36%
       ),
-      url('../images/hero-section-bg@2x.jpg');
+      url('./images/hero-section-bg@2x.jpg');
   }
 
   &__title {
