--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -2,7 +2,7 @@
 .footer{
     padding: 32px 0;
     position: relative;
-    background-image: url(/images/footer-bg.png);
+    background-image: url(../images/footer-bg.png);
     background-color: var(--color-primary-dark);
     background-repeat: no-repeat; 
     background-size: cover;
