--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -4,7 +4,7 @@
     rgba(18, 18, 17, 0.78) 2.03%, 
     rgba(18, 18, 17, 0.60) 58.46%, 
     rgba(18, 18, 17, 0.00) 90.36%),
-    url(/images/hero-section-bg.jpg);
+    url(../images/hero-section-bg.jpg);
     background-repeat: no-repeat;
     background-position: center top;
     background-size: cover;
@@ -20,7 +20,7 @@
     rgba(18, 18, 17, 0.78) 2.03%, 
     rgba(18, 18, 17, 0.60) 58.46%, 
     rgba(18, 18, 17, 0.00) 90.36%),
-    url(/images/hero-section-bg@2x.jpg);    
+    url(../images/hero-section-bg@2x.jpg);    
     }
     
     &__title {
