--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,6 +1,7 @@
 *, 
 *::before, *::after
 {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -28,6 +29,7 @@ img {
     display: block;
     max-width: 100%;
     height: auto;
+    -o-object-fit: cover;
     object-fit: cover;
 }
 
